General THIO structure IV thio-org owner

--- a/catalog/thio-organization.yaml
+++ b/catalog/thio-organization.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   type: organization
   lifecycle: production
+  owner: group:default/thio-org
   system: thio-org-system
   profile:
     displayName: THIO organization
