--- a/catalog/apicuro-api.yaml
+++ b/catalog/apicuro-api.yaml
@@ -7,5 +7,6 @@ spec:
   type: openapi
   lifecycle: production
   owner: thio-org@example.com
+  system: thio-system
   definition:
-    $text: http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/ui/artifacts/rhdh-dev/openapi/versions/latest
+    $text: 'http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/ui/artifacts/rhdh-dev/openapi/versions/latest#:~:text=Documentation-,Content,-References'
