--- a/catalog/thio-system.yaml
+++ b/catalog/thio-system.yaml
@@ -5,4 +5,4 @@ metadata:
   title: THIO System
   description: The THIO org system
 spec:
-  owner: group:default/thio-org
+  owner: group:default/thio.org
