--- a/catalog/apicuro-api.yaml
+++ b/catalog/apicuro-api.yaml
@@ -8,5 +8,6 @@ spec:
   lifecycle: production
   owner: group:default/thio-org
   system: thio-system
+  provideApis: component:default/quarkus-cicd
   definition:
-    $text: 'http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/ui/artifacts/rhdh-dev/openapi/versions/latest#:~:text=Documentation-,Content,-References'
+    $json: 'http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/apis/registry/v2/groups/rhdh-dev/artifacts/openapi'
