--- a/catalog/apicuro-api.yaml
+++ b/catalog/apicuro-api.yaml
@@ -10,4 +10,4 @@ spec:
   system: thio-system
   provideApis: component:default/quarkus-cicd
   definition:
-    $json: 'http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/apis/registry/v2/groups/rhdh-dev/artifacts/openapi'
+    $json: http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/apis/registry/v2/groups/rhdh-dev/artifacts/openapi
