--- a/catalog/apicuro-api.yaml
+++ b/catalog/apicuro-api.yaml
@@ -9,5 +9,4 @@ spec:
   owner: group:default/thio-org
   system: thio-system
   provideApis: component:default/quarkus-cicd
-  definition:
-    $json: http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/apis/registry/v2/groups/rhdh-dev/artifacts/openapi
+  definition: http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/apis/registry/v2/groups/rhdh-dev/artifacts/openapi
