--- a/catalog/apicuro-api.yaml
+++ b/catalog/apicuro-api.yaml
@@ -10,4 +10,6 @@ spec:
   system: thio-system
   provideApis: component:default/quarkus-cicd
   definition:
-    $json: http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/apis/registry/v2/groups/rhdh-dev/artifacts/openapi
+    $text: https://petstore.swagger.io/v2/swagger.json
+
+    #http://example-apicurioregistry-kafkasql.apicurio-registry-operator.router-default.apps.west.jgmpn.gcp.redhatworkshops.io/apis/registry/v2/groups/rhdh-dev/artifacts/openapi
