local part of email

--- a/catalog/thio-organization.yaml
+++ b/catalog/thio-organization.yaml
@@ -11,6 +11,7 @@ spec:
   lifecycle: production
   owner: group:default/thio-org
   system: thio-org-system
+  email: buuhsmead@example.com
   profile:
     displayName: THIO organization
   children: []
